--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
                 <div class="list-group-item"><button id="total_gps_orders_btn" onclick="showDetails('totalGpsOrders')">Total GPS Orders</button></div>
             </div>
             <div class="col-md-6 col-sm-6">
-                <div class="list-group-item"><button id="bus_form_pending" onclick="showDetails('busFormPending')">Bus Form Pending</button></div>
+                <div class="list-group-item"><button id="bus_form_pending" onclick="showDetails('busFormPending')">Bus Details Pending</button></div>
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="list-group-item"><button id="total_api_orders_btn" onclick="showDetails('totalApiOrders')">Total API Orders</button></div>
             </div>
             <div class="col-md-6 col-sm-6">
-                <div class="list-group-item"><button id="gps_pending_btn" onclick="showDetails('gpsPending')">GPS Pending</button></div>
+                <div class="list-group-item"><button id="gps_pending_btn" onclick="showDetails('gpsPending')">GPS Instalation Pending</button></div>
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="list-group-item"><button id="api_pending_btn" onclick="showDetails('apiPending')">API Pending</button></div>
