badi muskil se kia hai

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
             <div class="col-md-6 col-sm-6">
                 <div class="list-group-item"><button id="kyc_pending_btn" onclick="showDetails('kycPending')">KYC Pending</button></div>
             </div>
+            <div class="col-md-6 col-sm-6">
+                <div class="list-group-item"><button id="sticker" onclick="showDetails('stickerPending')">Sticker Pending</button></div>
+            </div>
         </div>
     </div>
 
