add sticker pending btn

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
             <div class="col-md-6 col-sm-6">
                 <div class="list-group-item"><button id="kyc_pending_btn" onclick="showDetails('kycPending')">KYC Pending</button></div>
             </div>
+            <div class="col-md-6 col-sm-6">
+                <div class="list-group-item"><button id="bus_sticker_pending" onclick="showDetails('busStickerPending')">Sticker Pending</button></div>
+            </div>
         </div>
     </div>
 
@@ -258,7 +261,6 @@
             .then(data => {
                 if (data.status === 200) {
                     const token = data.data.auth_token
-                    console.log("token")
                     const name = data.data.name
                     localStorage.setItem('token', token);
                     localStorage.setItem('name', name);
@@ -282,7 +284,6 @@
                     })
                     .then(data => {
                         jsonData = data;
-                        console.log('POST request successful:', jsonData);
                         showDetails('')
                     })
                     .catch(error => {
@@ -307,7 +308,6 @@
             var detailsContent = document.getElementById('detailsContent');
             try{
                 document.getElementById('bdName').textContent = localStorage.getItem('name');
-                console.log("#################$")
                 document.getElementById('bdMobile').textContent =localStorage.getItem('mobileNumber');
                 var detailsContent = document.getElementById('detailsContent');
                 if (typeof detailsType === 'string') {
@@ -383,12 +383,9 @@
             return nestedTable;
         }
         function logout() {
-            // Clear the stored user data
             localStorage.removeItem('mobileNumber');
             localStorage.removeItem('token');
             localStorage.removeItem('name');
-
-            // Show the login container
             showLoginContainer();
         }
         function checkLoginState() {
@@ -412,7 +409,6 @@
             })
             .then(data => {
                 jsonData = data;
-                console.log('POST request successful:', jsonData);
                 showDetails('')
                 document.getElementById('total_orders_btn').innerHTML += ' (' + jsonData.totalOrders.count + ')';
                 document.getElementById('total_gps_orders_btn').innerHTML +=  ' ('+ jsonData.totalGpsOrders.count +')';
@@ -421,6 +417,7 @@
                 document.getElementById('gps_pending_btn').innerHTML += ' (' + jsonData.gpsPending.count + ')';
                 document.getElementById('api_pending_btn').innerHTML += ' (' + jsonData.apiPending.count + ')';
                 document.getElementById('kyc_pending_btn').innerHTML += ' (' + jsonData.kycPending.count + ')';
+                document.getElementById('bus_sticker_pending').innerHTML += ' (' + jsonData.busStickerPending.count + ')';
             })
             .catch(error => {
                 alert(error.message);
