--- a/details.html
+++ b/details.html
@@ -41,7 +41,7 @@
     </nav>
 
     <div class="container">
-        <div class="col-md-1 list-group-item mt-3"><button id="backButton" >Back</button></div>
+        <div class="col-md-1 col-sm-1 list-group-item mt-3"><button id="backButton" >Back</button></div>
     </div>
 
     <div class="container" id="tableContainer">
