--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 showDetails('')
                 document.getElementById('total_orders_btn').innerHTML += ' (' + jsonData.totalOrders.count + ')';
                 document.getElementById('total_gps_orders_btn').innerHTML +=  ' ('+ jsonData.totalGpsOrders.count +')';
-                document.getElementById('bus_form_pending').innerHTML += ' (' + jsonData.gpsPending.count + ')';
+                document.getElementById('bus_form_pending').innerHTML += ' (' + jsonData.busFormPending.count + ')';
                 document.getElementById('total_api_orders_btn').innerHTML += ' ('+ jsonData.totalApiOrders.count + ')';
                 document.getElementById('gps_pending_btn').innerHTML += ' (' + jsonData.gpsPending.count + ')';
                 document.getElementById('api_pending_btn').innerHTML += ' (' + jsonData.apiPending.count + ')';
