--- a/details.html
+++ b/details.html
@@ -56,7 +56,7 @@
 
         const backButton = document.getElementById('backButton');
         backButton.addEventListener('click', function () {
-            window.location.href = 'bd.html';
+            window.location.href = 'index.html';
         });
 
         function renderTable(detailsType, detailsData) {
